arreglando codigo test

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <h1><a href="index.html">Master en CSS</a></h1>
     </header>
-    <nav class="nav">
+    <nav class="nav" aria-label="Site menu">
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="index.html">Contenido</a></li>
@@ -46,7 +46,7 @@
 
     <main class="content">
 
-        <aside class="aside">
+        <aside class="aside" aria-label="aside bar">
             <div class="widget">
                 <h3>Entrar a la web</h3>
                 <form action="">
@@ -340,7 +340,7 @@
             </section>
 
         </div>
-        <aside class="txt">
+        <aside class="txt" aria-label="aside bar">
             <p>Frase del día
             <blockquote>
                 "Toda persona tiene capacidad para cambiarse a sí misma"
